--- a/recette2.html
+++ b/recette2.html
@@ -26,7 +26,7 @@
         </br>
 
         <div class="info">
-            <img class="centre info" ; src="images\gateau.webp" alt="gateau">
+            <img class="centre info" ; src="gateau.webp" alt="gateau">
 
             <table class="info">
                 <tr>
